src/objects/MDM_Source__c.object
<CustomObject>
    <description>This object is to have he list of source for MDM.
When a record send to BOOMI MDM for mastering all records should have this reference,
To determine, who is the contributor for the system of record source.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Row description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>MDM_Location</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_Product</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EnableBulkupload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EnableBulkupload</description>
        <inlineHelpText>EnableBulkupload</inlineHelpText>
        <label>EnableBulkupload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceCode__c</fullName>
        <externalId>true</externalId>
        <label>SourceCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MDM_Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SourceCode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MDM_Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDM_Source_Name_Is_Required</fullName>
        <active>true</active>
        <description>MDM_Source_Name_Is_Required</description>
        <errorConditionFormula>VLOOKUP($ObjectType.MDM_Source__c.Fields.Id, $ObjectType.MDM_Source__c.Fields.Name, Name) &lt;&gt; Id</errorConditionFormula>
        <errorMessage>MDM Source   name is not unique.</errorMessage>
    </validationRules>
</CustomObject>